ADD: Chem_proof Pumps

--- a/public/img/desktop.ini
+++ b/public/img/desktop.ini
@@ -1,2 +1,4 @@
 [LocalizedFileNames]
 Screenshot 2024-01-22 224931.png=@Screenshot 2024-01-22 224931,0
+Screenshot 2024-08-28 111153.png=@Screenshot 2024-08-28 111153,0
+Screenshot 2024-08-28 112602.png=@Screenshot 2024-08-28 112602,0
